# multi-horizon-asymmetry-stock-screener

./: .gitignore  Dockerfile  README.md  filter_and_check_fcf.py  filter_and_check_new_math.py  generate_asymmetric_breakouts.py  generate_asymmetric_value_universe.py  generate_asymmetry_charts.py  generate_btsg_asymmetry_chart.py  generate_defensive_compounders.py  generate_expanded_breakouts.py  generate_final_asymmetry_utility_universe.py  generate_forward_value_screener.py  generate_multi_horizon_leaderboard.py  generate_new_math_charts.py  generate_passed_assets_chart.py  generate_pdd_expe_asymmetry_charts.py  generate_pure_asymmetry_universe.py  generate_super_positive_fcf_screen.py  pyproject.toml  stock_analysis_flow.md  timesfm_asymmetry_screener.py
.github/workflows/: python-ci.yml
data/raw/: spy_us_daily.csv
deploy/: README.md  aws_batch_job.template.json
examples/: basic_backtest_demo.py  chain_of_alpha_lite_demo.py  concurrency_benchmark_demo.py  formula_alpha_mining_demo.py  parallel_experiment_demo.py  real_data_ma_demo.py  real_stock_picker_demo.py  strategy_comparison_demo.py
outputs/: daily_pipeline_leaderboard.csv
scripts/: analyze_options.py  analyze_stock.py  analyze_trends.py  bootstrap.sh  check.sh  export_pick_fundamentals.py  render_pdf_via_chrome.py  run_daily_pipeline.py  run_job.py
src/qrt_platform/: __init__.py  alpha_formula_mining.py  alpha_mining.py  backtest.py  chart_links.py  data.py  experiment.py  factor_dsl.py  job_runner.py  models.py  reporting.py  stock_picker.py  (+2 more)
tests/: test_alpha_mining.py  test_backtest.py  test_chart_links.py  test_experiment.py  test_factor_dsl.py  test_formula_mining.py  test_parallel_reporting.py  test_reliability.py  test_stock_picker_universe.py
