[project]
name = "qrt-research-platform"
version = "0.2.0"
description = "Research-platform learning project for quant/algo trading engineering"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ethan" }]
dependencies = []

[project.optional-dependencies]
data = [
  "pandas>=2.2",
  "yfinance>=0.2.54",
]
dev = [
  "mypy>=1.15",
  "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
files = ["src/qrt_platform"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
